REST-API implementiert TODO: RGB to RGBW und umgekehrt

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,20 @@ default_envs = esp-wrover-kit
 build_type = debug
 extra_flags = -O0 -D DEBUG
 
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+monitor_speed = 115200
+build_flags = -std=c++11  ${common.extra_flags}
+build_type = ${common.build_type}
+lib_deps = 
+	me-no-dev/AsyncTCP@~1.1.1
+	me-no-dev/ESP Async WebServer@~1.2.3
+	ottowinter/AsyncTCP-esphome@1.1.1
+	ottowinter/ArduinoJson-esphomelib@~6.15.2
+
+
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
@@ -29,6 +43,3 @@ lib_deps =
 	ottowinter/AsyncTCP-esphome@1.1.1
 	ottowinter/ArduinoJson-esphomelib@~6.15.2
 
-[env:esp-wrover-kit-debug]
-build-type = debug
-build_flags = -std=c++11
