Bereitstellen der index.html als gzip

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,36 +10,42 @@
 
 [platformio]
 description = Versuch async Webservers mit Update OTA
-default_envs = esp-wrover-kit
+default_envs = esp32-led-controller-d
 
 [common]
-build_type = debug
-extra_flags = -O0 -D DEBUG
+build_type_d = debug
+build_type_r = release
+extra_flags_d = -O0 -D DEBUG
+extra_flags_r = -O3 -D RELEASE
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
-framework = arduino
-monitor_speed = 115200
-build_flags = -std=c++11  ${common.extra_flags}
-build_type = ${common.build_type}
-lib_deps = 
-	me-no-dev/AsyncTCP@~1.1.1
-	me-no-dev/ESP Async WebServer@~1.2.3
-	ottowinter/AsyncTCP-esphome@1.1.1
-	ottowinter/ArduinoJson-esphomelib@~6.15.2
-
-
-[env:esp-wrover-kit]
+[env:esp32-led-controller-d]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
-build_flags = -std=c++11  ${common.extra_flags}
-build_type = ${common.build_type}
+build_flags = -std=c++11  ${common.extra_flags_d}
+build_type = ${common.build_type_d}
+debug_tool = ftdi
 lib_deps = 
 	me-no-dev/AsyncTCP@~1.1.1
 	me-no-dev/ESP Async WebServer@~1.2.3
 	ottowinter/AsyncTCP-esphome@1.1.1
 	ottowinter/ArduinoJson-esphomelib@~6.15.2
 
+[env:esp32-led-controller-r]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+monitor_speed = 115200
+build_flags = -std=c++11  ${common.extra_flags_r}
+build_type = ${common.build_type_r}
+lib_deps = 
+	me-no-dev/AsyncTCP@~1.1.1
+	me-no-dev/ESP Async WebServer@~1.2.3
+	ottowinter/AsyncTCP-esphome@1.1.1
+	ottowinter/ArduinoJson-esphomelib@~6.15.2
+
+;   text    data     bss     dec     hex filename
+; 829873  278252   32416 1140541  11673d .pio\build\esp32-led-controller-d\firmware.elf
+;   text    data     bss     dec     hex filename
+; 776373  268200   32416 1076989  106efd .pio\build\esp32-led-controller-r\firmware.elf
