- automatischer buildzähler - PWM Config implementeiert

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,9 @@ build_type_r = release
 extra_flags_d = -O0 -D DEBUG
 extra_flags_r = -O3 -D RELEASE
 
+
 [env:esp32-led-controller-d]
+extra_scripts = pre:buildcount.py
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
