fuer release debugstatements deaktiviert

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ default_envs = esp32-led-controller-d
 [common]
 build_type_d = debug
 build_type_r = release
-extra_flags_d = -O0 -D DEBUG
-extra_flags_r = -O3 -D RELEASE
+extra_flags_d = -O0 -DDEBUG
+extra_flags_r = -O3 -DRELEASE -DNDEBUG
 
 
 [env:esp32-led-controller-d]
@@ -46,8 +46,3 @@ lib_deps =
 	me-no-dev/ESP Async WebServer@~1.2.3
 	ottowinter/AsyncTCP-esphome@1.1.1
 	ottowinter/ArduinoJson-esphomelib@~6.15.2
-
-;   text    data     bss     dec     hex filename
-; 829873  278252   32416 1140541  11673d .pio\build\esp32-led-controller-d\firmware.elf
-;   text    data     bss     dec     hex filename
-; 776373  268200   32416 1076989  106efd .pio\build\esp32-led-controller-r\firmware.elf
