--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,7 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 build_flags = -std=c++11  ${common.extra_flags_r}
 build_type = ${common.build_type_r}
 lib_deps = 
