- laeuft ohne ota

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,7 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 build_flags = -std=c++11  ${common.extra_flags_d}
 build_type = ${common.build_type_d}
 debug_tool = ftdi
@@ -39,6 +40,7 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 build_flags = -std=c++11  ${common.extra_flags_r}
 build_type = ${common.build_type_r}
 lib_deps = 
@@ -47,7 +49,3 @@ lib_deps =
 	ottowinter/AsyncTCP-esphome@1.1.1
 	ottowinter/ArduinoJson-esphomelib@~6.15.2
 
-;   text    data     bss     dec     hex filename
-; 829873  278252   32416 1140541  11673d .pio\build\esp32-led-controller-d\firmware.elf
-;   text    data     bss     dec     hex filename
-; 776373  268200   32416 1076989  106efd .pio\build\esp32-led-controller-r\firmware.elf
