--- a/platformio.ini
+++ b/platformio.ini
@@ -49,3 +49,19 @@ lib_deps =
 	ottowinter/AsyncTCP-esphome@1.1.1
 	ottowinter/ArduinoJson-esphomelib@~6.15.2
 
+
+[env:esp32-led-controller-r-ota]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+monitor_speed = 115200
+upload_port = led-wozi.fritz.box
+upload_protocol = espota
+build_flags = -std=c++11  ${common.extra_flags_r}
+build_type = ${common.build_type_r}
+lib_deps = 
+	me-no-dev/AsyncTCP@~1.1.1
+	me-no-dev/ESP Async WebServer@~1.2.3
+	ottowinter/AsyncTCP-esphome@1.1.1
+	ottowinter/ArduinoJson-esphomelib@~6.15.2
+
